@@ -2082,7 +2082,7 @@ static PyNumberMethods set_as_number = {
 	(binaryfunc)set_xor,		/*nb_xor*/
 	(binaryfunc)set_or,		/*nb_or*/
 	0,				/*nb_int*/
-	0,				/*nb_long*/
+	0,				/*nb_reserved*/
 	0,				/*nb_float*/
 	0,				/*nb_inplace_add*/
 	(binaryfunc)set_isub,		/*nb_inplace_subtract*/
